# kidweel-capstone

./: .env.example  .gitignore  AGENT-MAP-C1_spotgamma_strategy.md  AGENT-MAP-C1a_corrections.md  AGENTS.md  CLAUDE.md  Dockerfile  NOTICE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
diagrams/: claude_context_layer.md
docker/: crontab  entrypoint.sh
docs/: advisory-group-layer.md  advisory-group-matrix.md  alpaca-blueprint-replay.md  alpaca-greeks-layer.md  alpaca-paper-bridge.md  alpaca-replay-inputs.md  artifact_inspection_checklist.md  backtest-evidence.md  backtest_evidence_status.md  c13c-live-dynamics.md  c13d-chatgpt-bridge.md  c13e-mcp-enrichment.md  c13f-chain-snapshot-fetch.md  canonical-backtest-refresh.md  claude-advisor-context.md  claude-backtest-wiring.md  claude-overlay-testing.md  claude-overlay.md  claude_code_access_runbook.md  connectors_c1_runbook.md  cursor_mobile_pack_contract.md  evidence_artifacts_guide.md  findings-c13-claude-context.md  github_branch_reconciliation_pr_runbook.md  kidweel_agents_as_tools_agility_c1.md  mcp_c1a_claude_reconciliation.md  mcp_c1b_alpaca_qa_shadow_deprecation.md  mcp_c1c_claude_mcp_diagnostic.md  mcp_c1d_claude_doctor_env_diagnostic.md  mobile_infra_runbook.md  notebook-alignment.md  openai_agents_guardrail_stack_c1.md  openai_agents_hitl_paper_transport_c1.md  operator_commands.md  operator_test_commands_morning_loop.md  paper-approval-candidates.md  paper-closeout.md  paper-order-status-audit.md  paper-payload-candidates.md  paper-position-audit.md  (+13 more)
examples/: alpaca_blueprint_replay_inputs.py  alpaca_greeks_candidate_stage.py  alpaca_replay_input_availability.py  backtest_sanity_run.py  build_paper_approval_candidates.py  build_paper_payload_candidates.py  check_paper_order_status.py  check_paper_positions.py  close_paper_position.py  generate_operator_advisory.py  generate_spread_candidates.py  populate_raw_session_candidates.py  run_canonical_backtest_refresh.py  run_threshold_sweep.py  (+3 more)
(+299 files in other folders)
