[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kidweel-automation"
version = "0.1.0"
description = "Deterministic options decision system"
requires-python = ">=3.11"

dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=15.0",
    "python-dotenv>=1.0",
    "pydantic>=2.6",
    "requests>=2.31",
    "pytz>=2024.1",
    "tqdm>=4.66",
    "rich>=13.7",

    # Alpaca / MCP path
    "alpaca-py>=0.37.0",

    # ML (light only)
    "scikit-learn>=1.4",
    "joblib>=1.3",

    # Excel ingestion (you already depend on this implicitly)
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
    "ipykernel",
    "jupyter",
    "pytest>=8.0",
    "ruff",
    "mypy"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]